tests/int/use_command/snapshots/integration__int__use_command__depth__modules_reexports_depth_e_G.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - reexports
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::nesting

----- stderr -----
