tests/int/use_command/snapshots/integration__int__use_command__depth__modules_reexports_depth_e_d_2.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-e"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::nesting

----- stderr -----
