tests/int/use_command/snapshots/integration__int__use_command__depth__modules_reexports_depth_r_e_d_1.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-r"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::item_visibility
crate::nesting
crate::visibility

----- stderr -----
